ecmascript/parser/tests/test262-error-references/fail/cc1519d0d99fc450.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/cc1519d0d99fc450.js:1:10
  |
1 | if(true) const a = 1;
  |          ^^^^^

